--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,25 +5,15 @@ os: Visual Studio 2017
 
 clone_depth: 5
 
-matrix:
-  fast_finish: false
-
 environment:
   global:
-    CONDA_INSTALL_LOCN_32: "C:\\Miniconda36"
-    CONDA_INSTALL_LOCN_64: "C:\\Miniconda36-x64"
+    CONDA_INSTALL_LOCN: "C:\\Miniconda36-x64"
     VCVARSALL: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\VC\\Auxiliary\\Build\\vcvarsall.bat"
-  matrix:
-    - ARCH: 32
-    - ARCH: 64
 
 install:
-  - set "PATH=C:\msys64\mingw%ARCH%\bin;%PATH%"
-  - if [%ARCH%]==[64] set "CONDA_INSTALL_LOCN=%CONDA_INSTALL_LOCN_64%"
-  - if [%ARCH%]==[32] set "CONDA_INSTALL_LOCN=%CONDA_INSTALL_LOCN_32%"
+  - set "PATH=C:\msys64\mingw64\bin;%PATH%"
   - call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - if [%ARCH%]==[64] call "%VCVARSALL%" x64
-  - if [%ARCH%]==[32] call "%VCVARSALL%" x86
+  - call "%VCVARSALL%" amd64
   - conda config --add channels conda-forge --force
   - conda install --yes --quiet autotools_clang_conda llvm-openmp pthreads-win32 nauty mpir boost-cpp
 
@@ -45,9 +35,11 @@ before_build:
   - set "lt_cv_deplibs_check_method=pass_all"
 
 build_script:
+  - bash -lce "cd /c/projects/Normaliz && autoreconf -i && chmod +x configure"
   - bash -lce "cd /c/projects/Normaliz && ./configure --prefix=/c/artifacts/normaliz --with-nauty=$PREFIX -with-gmp=\"$PREFIX\""
   - bash -lce "cd /c/projects/Normaliz && make -j2"
   - bash -lce "cd /c/projects/Normaliz && make install"
+
   - cp "%CONDA_PREFIX%"\Library\bin\libomp.dll C:\artifacts\normaliz\
   - cp "%CONDA_PREFIX%"\Library\bin\mpir.dll C:\artifacts\normaliz\
   - 7z a C:\normaliz.zip C:\artifacts
