--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,6 +28,7 @@ before_build:
   - set "LD=lld-link.exe"
   - FOR /F "delims=" %%i in ('cygpath.exe -u "%CONDA_PREFIX%"') DO set "PREFIX=%%i/Library"
   - echo "PREFIX:%PREFIX%"
+  - cp "%CONDA_PREFIX%/Library/lib/gmp.lib" "%CONDA_PREFIX%/Library/lib/gmpxx.lib"
   - set "CFLAGS=-I%PREFIX%/include -O2 -D_CRT_SECURE_NO_WARNINGS -D_MT -fuse-ld=lld"
   - set "CXXFLAGS=%CFLAGS%"
   - set "CPPFLAGS=%CFLAGS%"
